# youtube-transcript-rag

./: .gitignore  GEMINI.md  README.md  package-lock.json  package.json  sd.config.js  tailwind.config.js  vite.config.ts
backend/: debug_retrieval.py  pyproject.toml  test_transcript.py  test_transcript_service.py  test_ytdlp.py
backend/app/: main.py
backend/app/api/v1/: endpoints.py
backend/app/services/: indexing_service.py  retrieval_service.py  transcript_service.py  yt_dlp_service.py
backend/tests/: conftest.py  test_pipeline.py
frontend/: index.html  sd.config.js
frontend/.storybook/: preview.ts
frontend/src/: App.tsx
frontend/src/components/buttons/: CmmButton.tsx
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/forms/: UrlIngestionForm.stories.tsx  (+1 more)
frontend/src/pages/: ChatPage.tsx  VirtualTranscriptPage.tsx
src/: App.tsx  index.css
src/components/buttons/: CmmButton.stories.tsx  CmmButton.tsx
src/components/cards/: CmmTranscriptCard.stories.tsx  CmmTranscriptCard.test.tsx  CmmTranscriptCard.tsx
src/components/forms/: UrlIngestionForm.tsx
src/components/inputs/: CmmUrlInput.stories.tsx  CmmUrlInput.tsx
src/components/lists/: VirtualTranscriptList.stories.tsx  VirtualTranscriptList.tsx
src/data/: large-transcript-dataset.json
src/pages/: TestTranscriptCardPage.tsx  TranscriptCardPage.stories.tsx
src/tokens/base/: uswds.json
src/tokens/cmm/: brand.json  colors.json  typography.json
src/tokens/component/: button.json
src/tokens/semantic/: color.json
src/tokens/uswds/: pallet.json
(+2 files in other folders)
