[project]
name = "youtube-transcript-rag-backend"
version = "0.1.0"
description = "Backend for YouTube Transcript RAG Pipeline"
authors = [
    {name = "Justin Duplain"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "llama-index (>=0.14.12,<0.15.0)",
    "yt-dlp (>=2025.12.8,<2026.0.0)",
    "chromadb (>=1.4.0,<2.0.0)",
    "youtube-transcript-api (>=1.2.3,<2.0.0)",
    "llama-index-vector-stores-chroma (>=0.5.5,<0.6.0)",
    "llama-index-embeddings-openai (>=0.5.1,<0.6.0)",
    "llama-index-llms-openai (>=0.6.12,<0.7.0)",
    "llama-index-retrievers-bm25 (>=0.6.5,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
